--- a/protogeni/lib/GeniCredential.pm.in
+++ b/protogeni/lib/GeniCredential.pm.in
@@ -123,6 +123,8 @@ sub extensions($)	{ return field($_[0], "extensions"); }
 sub owner_cert($)	{ return $_[0]->{"owner_cert"}; }
 sub target_cert($)	{ return $_[0]->{"target_cert"}; }
 sub hrn($)		{ return $_[0]->{"target_cert"}->hrn(); }
+sub target_uri($)       { return $_[0]->{"target_cert"}->uri(); }
+sub owner_uri($)        { return $_[0]->{"owner_cert"}->uri(); }
 
 #
 # Stringify for output.
