--- a/protogeni/security/verifygenicred.in
+++ b/protogeni/security/verifygenicred.in
@@ -15,7 +15,7 @@ use Data::Dumper;
 # 
 sub usage()
 {
-    print("Usage: verifygenicap [-d] [-o file] <capfile>\n");
+    print("Usage: verifygenicred [-d] [-o file] <credfile>\n");
     exit(-1);
 }
 my $optlist = "do:";
@@ -250,6 +250,16 @@ foreach my $credential ( keys( %credentials ) ) {
 		    unless $allowed{ $name } or $allowed{ "*" };
 	    }		
 	}
+
+	my $expiry = lookup( $node, "expiry" )->textContent;
+	my $parent_expiry = lookup( $parent, "expiry" )->textContent;
+	my $dateregexp = '^\d\d\d\d-\d\d-\d\dT\d\d:\d\d:\d\d$';
+
+	fatal( "invalid delegation (malformed expiry)" )
+	    if $expiry !~ $dateregexp or $parent_expiry !~ $dateregexp;
+
+	fatal( "invalid delegation (expiry violation)" )
+	    if $expiry > $parent_expiry;
     }
 }
 
