--- a/Makeconf.in
+++ b/Makeconf.in
@@ -88,3 +88,5 @@ host_cpu	= @host_cpu@
 
 HAVE_ULXMLRPCPP	= @HAVE_ULXMLRPCPP@
 STANDALONE_CLEARINGHOUSE = @STANDALONE_CLEARINGHOUSE@
+
+NODE_USAGE_SUPPORT = @NODE_USAGE_SUPPORT@
