--- a/configure.in
+++ b/configure.in
@@ -212,6 +212,7 @@ AC_SUBST(PROTOGENI_CLEARINGHOUSE)
 AC_SUBST(PROTOGENI_DOMAIN)
 AC_SUBST(STANDALONE_CLEARINGHOUSE)
 AC_SUBST(GMAP_API_KEY)
+AC_SUBST(NODE_USAGE_SUPPORT)
 
 #
 # Offer both versions of the email addresses that have the @ escaped
@@ -294,6 +295,7 @@ PROTOGENI_SUPPORT=0
 PROTOGENI_CLEARINGHOUSE=0
 PROTOGENI_DOMAIN="unknown"
 STANDALONE_CLEARINGHOUSE=0
+NODE_USAGE_SUPPORT=0
 
 #
 # XXX You really don't want to change these!
@@ -998,7 +1000,13 @@ outfiles="$outfiles Makeconf GNUmakefile \
 	collab/mailman/mailmanproxy collab/mailman/setmmpasswd \
 	collab/cvstools/cvs.proxy collab/cvstools/cvs_ctrl \
 	collab/cvstools/cvsrepo_ctrl.proxy collab/cvstools/cvsrepo_ctrl \
-	collab/cvstools/webcvsrepo_ctrl "
+	collab/cvstools/webcvsrepo_ctrl \
+	node_usage/GNUmakefile node_usage/mk-plots \
+	node_usage/analy node_usage/publish \
+	node_usage/analy2 node_usage/refresh \
+	node_usage/from_ptop node_usage/sanity \
+	node_usage/gather node_usage/mk-php-pages \
+	node_usage/get-start-date"
 
 #
 # Do this for easy distclean.
