--- a/node_usage/mk-plots.in
+++ b/node_usage/mk-plots.in
@@ -1,6 +1,13 @@
 #!/usr/bin/perl
 
-chdir "/usr/testbed/data/node_usage/data";
+use strict;
+
+our @to_plot;
+require "@prefix@/etc/node_usage.conf";
+
+my $num = @to_plot;
+
+chdir "@prefix@/data/node_usage";
 
 sub true {1}
 sub false {0}
@@ -35,13 +42,27 @@ sub plot ( $@ ) {
 
     print F "set output 'node_avail-$what.$EXT'\n";
     print F "set ylabel 'Available Nodes'\n";
-    print F "plot 'node_usage-$what.dat' using 1:2 title 'pc600 pc850 pc2000 pc3000s' with lines lw $lw,\\\n";
-    print F "     'node_usage-$what.dat' using 1:3 title 'pc3000s' with lines lw $lw\n\n";
+    my $i = 2;
+    my @plot_lines;
+    foreach (@to_plot) {
+	my $label = $_->[0];
+	push @plot_lines,
+	     "'node_usage-$what.dat' using 1:$i title '$label' with lines lw $lw";
+	$i++;
+    }
+    print F "plot ", join(",\\\n     ", @plot_lines), "\n\n";
 
     print F "set output 'node_usage-$what.$EXT'\n";
-    print F "set ylabel 'Node Usage'\n";
-    print F "plot 'node_usage-$what.dat' using 1:4 title 'pc600 pc850 pc2000 pc3000s' with lines lw $lw,\\\n";
-    print F "     'node_usage-$what.dat' using 1:5 title 'pc3000s' with lines lw $lw\n\n";
+    print F "set ylabel 'Node Usage %'\n";
+    undef @plot_lines;
+    foreach (@to_plot) {
+	my $label = $_->[0];
+	my $j = $i - $num;
+	push @plot_lines,
+	     "'node_usage-$what.dat' using 1:(100*\$$i/(\$$j+\$$i)) title '$label' with lines lw $lw";
+	$i++;
+    }
+    print F "plot ", join(",\\\n     ", @plot_lines), "\n\n";
     close F;
 
     system("/usr/local/bin/gnuplot node_usage-$what.gpl");
@@ -68,3 +89,10 @@ plot("by_hourofweek", xrange=>"[0:7]",
      xtics=>"('Midnight Mon' 0, 'Tues' 1, 'Wed' 2, 'Thurs' 3, 'Fri' 4, 'Sat' 5, 'Sun' 6)");
 plot("by_month", xrange=>"[0:11]",
      xtics=>"('Jan' 0, 'Feb' 1, 'Mar' 2, 'Apr' 3, 'May' 4, 'June' 5, 'July' 6, 'Aug' 7, 'Sep' 8, 'Oct' 9, 'Nov' 10, 'Dec' 11)");
+
+
+
+
+
+
+
